# deepseek-finetuning

./: .gitignore  Changelog.md  Modelfile  README.md  check_ollama.py  convert_to_safetensors.py  deepspeed_config.json  fine_tune_Llama8B.py  generate_dataset.py  hello.py  merge_lora.py  pyproject.toml
