[project]
name = "deepseek-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "alive-progress>=3.2.0",
    "bitsandbytes>=0.45.1",
    "click>=8.1.8",
    "datasets>=3.2.0",
    "deepspeed>=0.16.3",
    "mpi4py>=4.0.1",
    "ollama>=0.4.7",
    "peft>=0.14.0",
    "protobuf>=5.29.3",
    "requests>=2.32.3",
    "safetensors>=0.5.2",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.18.0",
    "transformers>=4.48.1",
]
